# solana-ua-bootcamp-2025-03-19

./: README.md  check-balance.ts  generate-keypair.ts  package-lock.json  package.json  read-keypair.ts  tsconfig.json
.github/workflows/: sync-readme.yml
practice-1/: address_my_git.txt
practice-1/solana-rust_training/: .env_s  Cargo.toml  readme.md
practice-1/solana-rust_training/src/: main.rs
practice-2/solana-rust_training2/: .env_s  Cargo.toml
practice-2/solana-rust_training2/src/: main.rs
practice-3/escrow/: Anchor.toml  jest.config.js  package.json
practice-3/escrow/programs/escrow/: Cargo.toml
practice-3/escrow/programs/escrow/src/: lib.rs
practice-3/escrow/programs/escrow/src/instructions/: make_offer.rs  mod.rs  take_offer.rs
practice-3/escrow/tests/: escrow.test.ts
practice-4/favorites/: Anchor.toml  package-lock.json  package.json
practice-4/favorites/programs/favorites/src/: lib.rs
practice-4/favorites/tests/: favorites.test.ts  system-program-errors.ts
