[package]
name = "solana-rust_training2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
base58 = "0.2.0"
futures = "0.3.31"
mpl-token-metadata = "5.1.0"
solana-client = "2.2.6"
solana-program = "2.2.1"
solana-sdk = "2.2.2"
solana-transaction = "2.2.2"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
spl-token-2022 = "8.0.1"
spl-token-client = "0.14.0"
tokio = "1.44.2"

